...
            android:text="Q2. Our measurement of time is based on which number system? (A popular math quiz question for students!) "
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/q2am"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...

        <Button
            android:id="@+id/q1am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:backgroundTint="@color/button_color"
            android:text="(A) 3"
            app:layout_constraintBottom_toTopOf="@+id/q1cm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
...

        <Button
            android:id="@+id/q1bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:backgroundTint="@color/button_color"
            android:text="(B) 7"
            app:layout_constraintBottom_toTopOf="@+id/q1dm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.735"
...

        <Button
            android:id="@+id/q2cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q3cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3am"
            app:layout_constraintVertical_bias="0.0" />

...

        <Button
            android:id="@+id/q3bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q3dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q4am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q4bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q4cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q4dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q5am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q5bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q5cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q5dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q6am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q6bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q6cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q6dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q7am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q7bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q7cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q7dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q8cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q8am" />

        <Button
            android:id="@+id/q8bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q8dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q9am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q9bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q9cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q9dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q10am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q10bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q10cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q10dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q2bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/q2dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/submath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintTop_toBottomOf="@+id/q10cm" />
        <TextView
            android:id="@+id/result_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
