...
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007" />

        <Button
            android:id="@+id/q1ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(A) Thermocol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.002" />

        <Button
            android:id="@+id/q1bp"
            android:layout_width="128dp"
            android:layout_height="46dp"
            android:text="(B) Steam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.705"
            app:layout_constraintStart_toEndOf="@+id/q1ap"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/q1cp"
            android:layout_width="138dp"
            android:layout_height="46dp"
            android:text="(C) Oil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1bp"
            app:layout_constraintVertical_bias="0.018" />

        <Button
            android:id="@+id/q1dp"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:text="(D) Ice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
